--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1,1 +1,14 @@
 @import "base.css";
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    font-family: Roboto;
+    font-weight: normal !important;
+}
+
+
+@font-face {
+    src: url("../src/assets/fonts/roboto/Roboto-Regular.ttf");
+    font-family: Roboto;
+}
